Fixed the issue where the entire canvas was acting jumpy

--- a/modified.css
+++ b/modified.css
@@ -121,3 +121,7 @@ div#moveBox {
     padding-right: 20px;
     padding-bottom: 20px;
 }
+
+body { /* ...or body.dialogShowing */
+	overflow: hidden;
+}
